--- a/views/home.erb
+++ b/views/home.erb
@@ -1,11 +1,6 @@
-<h1> Rock, Paper, Scissors</h1>
 
-<h2>Welcome, here are the rules..</h2>
+  <h1 class="top"> ROCK. <br> PAPER. <br> SCISSORS.</h1>
 
-<h3>Simple stuff here, really.</h3>
-
-<ul>
-  <li>'rock' beats 'scissors'</li>
-  <li>'scissors' beats 'paper'</li>
-  <li>'paper' beats 'rock'</li>
-</ul>
+<div class="bottom">
+  <h2>'rock' <span>beats</span> 'scissors'</h2> <h2>'scissors' <span>beats</span> 'paper'</h2> <h2>'paper' <span>beats</span> 'rock'</h2>
+</div>
